--- a/components.html
+++ b/components.html
@@ -5,40 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Practice project: animated charts as reusable web components</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
-    <!-- TEMPLATES START -->
-    <template id="bar-chart" data-json='example-data'>
-      <link rel="stylesheet" href="../styles/bar-chart.css">
-        <figure class="bar-chart__figure">
-            <span class="bar-chart__container"></span>
-            <figcaption class="bar-chart__caption">
-                <slot name="caption-text">
-                  <i>Placeholder - please add a screen reader friendly description.</i>
-                </slot>
-                <br />
-                <slot name="no-script">
-                  <i>Noscript tag placeholder - please add an instructive text.</i>
-                </slot>
-            </figcaption>
-        </figure>
-    </template>
-    <!-- TEMPLATES END -->
     <main class="main">
-      <h1>Practice project: animated charts as reusable web components</h1>
-      <h2>Example 1 - bar charts </h2>
-      <h3>Bar chart: Fruit consumption in Germany</h3>
+      <h1>Available components</h1>
+      <h2>Bar chart</h2>
+      <h3>Usage</h3>
+      <code>
+        &ltcomponent-name data-json='json-file-name'&gt
+        <br />
+        &nbsp;&nbsp;&ltspan slot="caption-text"&gtcaption text&lt/span&gt
+        <br />
+        &nbsp;&nbsp;&ltnoscript slot="no-script"&gtnoscript text&lt/noscript&gt
+        <br />
+        &lt/component-name&gt
+      </code>
+      <h3>Example: Fruit consumption in Germany</h3>
       <bar-chart data-json='fruit-consumption' class="chart">
         <span slot="caption-text">This bar chart shows the consumption in tons for the most popular fruit varieties in Germany in the economic year 2022/2023.</span>
         <noscript slot="no-script">Please activate JavaScript in your browser settings to view this chart.</noscript>
       </bar-chart>
-      <h3>Bar chart: Error</h3>
+      <h3>Example: Error</h3>
       <bar-chart data-json='error' class="chart">
         <span slot="caption-text">This should show an error message instead of a bar chart, as the json file name is incorrect.</span>
         <noscript slot="no-script">Please activate JavaScript in your browser settings to view this chart.</noscript>
       </bar-chart>
     </main>
-    <script src="bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
