--- a/fixes.html
+++ b/fixes.html
@@ -56,8 +56,33 @@
         </article>
         </main>
         <footer class="footer">
-            <p>By j-hha - <a href="https://github.com/j-hha/web-component-charts">Find the code on github</a>.</p>
-            <p><small>For private use only</small></p>
+          <h2 class="footer__heading">About this project</h2>
+          <div class="footer__content">
+            <div class="footer__content-col">
+              <h3 class="footer__heading">Technologies used</h3>
+              <p>
+                <ul class="footer__content-list">
+                  <li class="footer__content-list-item">HTML Templates</li>
+                  <li class="footer__content-list-item">Custom Elements</li>
+                  <li class="footer__content-list-item">Shadow DOM</li>
+                  <li class="footer__content-list-item">TypeScript</li>
+                  <li class="footer__content-list-item">Webpack</li>
+                  <li class="footer__content-list-item">HTML</li>
+                  <li class="footer__content-list-item">CSS</li>
+                  <li class="footer__content-list-item">JavaScript</li>
+                </ul>
+                <a class="footer__link" href="https://github.com/j-hha/web-component-charts">Find the code on github</a>.
+              </p>
+            </div>
+            <div class="footer__content-col">
+              <h3 class="footer__heading">Author</h3>
+              <p>By <a class="footer__link" href="https://github.com/j-hha">j-hha</a></p>
+            </div>
+            <div class="footer__content-col">
+              <h3 class="footer__heading">Notice</h3>
+              <p>For private use only</p>
+            </div>
+          </div>
         </footer>
     </body>
 </html>
