--- a/components.html
+++ b/components.html
@@ -35,31 +35,88 @@
       <h2 class="main__heading">Available components</h2>
       <section class="section">
         <h3 class="section__heading">Bar chart</h3>
-        <h4 class="section__heading">Usage</h4>
-        <code class="code">
-          &ltcomponent-name data-json='json-file-name'&gt
-          <br />
-          &nbsp;&nbsp;&ltspan slot="caption-text"&gtcaption text&lt/span&gt
-          <br />
-          &nbsp;&nbsp;&ltnoscript slot="no-script"&gtnoscript text&lt/noscript&gt
-          <br />
-          &lt/component-name&gt
-        </code>
-        <h4 class="section__heading">Example: Fruit consumption in Germany</h4>
-        <bar-chart data-json='fruit-consumption' class="chart section__col">
-          <span slot="caption-text">This bar chart shows the consumption in tons for the most popular fruit varieties in Germany in the economic year 2022/2023.</span>
-          <noscript slot="no-script">Please activate JavaScript in your browser settings to view this chart.</noscript>
-        </bar-chart>
-        <h4 class="section__heading">Example: Error</h4>
-        <bar-chart data-json='error' class="chart section__col">
-          <span slot="caption-text">This should show an error message instead of a bar chart, as the json file name is incorrect.</span>
-          <noscript slot="no-script">Please activate JavaScript in your browser settings to view this chart.</noscript>
-        </bar-chart>
-        </section>
+        <div class="section__content section__content--2col">
+          <div class="section__col">
+            <h4 class="section__heading">Example: Bar chart (columns)</h4>
+            <bar-chart data-json='example-data' class="chart section__col">
+              <span slot="caption-text">This is the caption for a bar chart, showing dummy data.</span>
+              <noscript slot="no-script">Please activate JavaScript in your browser settings to view this chart.</noscript>
+            </bar-chart>
+            <h4 class="section__heading">Example: Error</h4>
+            <bar-chart data-json='error' class="chart section__col">
+              <span slot="caption-text">This should show an error message instead of a bar chart, as the json file name is incorrect.</span>
+              <noscript slot="no-script">Please activate JavaScript in your browser settings to view this chart.</noscript>
+            </bar-chart>
+          </div>
+          <div class="section__col">
+            <h4 class="section__heading">Usage</h4>
+            <code class="code">
+              &ltcomponent-name data-json="json-file-name"&gt
+              <br />
+              &nbsp;&nbsp;&ltspan slot="caption-text"&gtcaption text&lt/span&gt
+              <br />
+              &nbsp;&nbsp;&ltnoscript slot="no-script"&gtnoscript text&lt/noscript&gt
+              <br />
+              &lt/component-name&gt
+            </code>
+            <h4>JSON</h4>
+            <code class="code">
+              { <br />
+              &nbsp;&nbsp;"unit": "kilo", <br />
+              &nbsp;&nbsp;"data": [ <br />
+              &nbsp;&nbsp;&nbsp;&nbsp;{ <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"name": "item 1", <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"value": 300, <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"color": "deeppink" <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;}, <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;{ <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"name": "item 2", <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"value": 200, <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"color": "#fdb827" <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;}, <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;{ <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"name": "item 3", <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"value": 500, <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;}, <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;{ <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"name": "item 4", <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"value": 100, <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;} <br />
+                &nbsp;&nbsp;] <br />
+            } <br />
+            </code>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <p>By j-hha - <a href="https://github.com/j-hha/web-component-charts">Find the code on github</a>.</p>
-      <p><small>For private use only</small></p>
+      <h2 class="footer__heading">About this project</h2>
+      <div class="footer__content">
+        <div class="footer__content-col">
+          <h3 class="footer__heading">Technologies used</h3>
+          <p>
+            <ul class="footer__content-list">
+              <li class="footer__content-list-item">HTML Templates</li>
+              <li class="footer__content-list-item">Custom Elements</li>
+              <li class="footer__content-list-item">Shadow DOM</li>
+              <li class="footer__content-list-item">TypeScript</li>
+              <li class="footer__content-list-item">Webpack</li>
+              <li class="footer__content-list-item">HTML</li>
+              <li class="footer__content-list-item">CSS</li>
+              <li class="footer__content-list-item">JavaScript</li>
+            </ul>
+            <a class="footer__link" href="https://github.com/j-hha/web-component-charts">Find the code on github</a>.
+          </p>
+        </div>
+        <div class="footer__content-col">
+          <h3 class="footer__heading">Author</h3>
+          <p>By <a class="footer__link" href="https://github.com/j-hha">j-hha</a></p>
+        </div>
+        <div class="footer__content-col">
+          <h3 class="footer__heading">Notice</h3>
+          <p>For private use only</p>
+        </div>
+      </div>
     </footer>
     <script src="./dist/bundle.js"></script>
   </body>
