added testing suit

--- a/fixes.html
+++ b/fixes.html
@@ -66,12 +66,13 @@
                   <li class="footer__content-list-item">Custom Elements</li>
                   <li class="footer__content-list-item">Shadow DOM</li>
                   <li class="footer__content-list-item">TypeScript</li>
-                  <li class="footer__content-list-item">Webpack</li>
                   <li class="footer__content-list-item">HTML</li>
                   <li class="footer__content-list-item">CSS</li>
                   <li class="footer__content-list-item">JavaScript</li>
+                  <li class="footer__content-list-item">Webpack</li>
+                  <li class="footer__content-list-item">Jest</li>
                 </ul>
-                <a class="footer__link" href="https://github.com/j-hha/web-component-charts">Find the code on github</a>.
+                <a class="footer__link" href="https://github.com/j-hha/web-component-charts">Find the code on github</a>
               </p>
             </div>
             <div class="footer__content-col">
